# LwM2M-server-and-client

Wakaama_client_main/: CMakeCache.txt  Makefile  cmake_install.cmake  lwm2mclient  lwm2mclient_tinydtls
Wakaama_client_main/wakaama/examples/client/: CMakeLists.txt  lwm2mclient.c  lwm2mclient.h  object_device.c  object_device_extension.c  object_water_meter.c
Wakaama_client_main/wakaama/examples/shared/tinydtls/: Makefile  config.status
Wakaama_client_main/wakaama/examples/shared/tinydtls/aes/: Makefile
Wakaama_client_main/wakaama/examples/shared/tinydtls/autom4te.cache/: requests
Wakaama_client_main/wakaama/examples/shared/tinydtls/ecc/: Makefile
Wakaama_client_main/wakaama/examples/shared/tinydtls/sha2/: Makefile
Wakaama_client_main/wakaama/examples/shared/tinydtls/tests/: Makefile
Wakaama_client_main/wakaama/lib/lib/: CMakeCache.txt  Makefile  cmake_install.cmake
